# esp32_modbus

./: sdkconfig
main/: CMakeLists.txt  main.c  modbus.c
